src/objects/Opportunity_Rate_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity_Product__c</fullName>
        <label>Opportunity Product</label>
        <referenceTo>Opportunity_Product__c</referenceTo>
        <relationshipLabel>Opportunity Rate Plans</relationshipLabel>
        <relationshipName>Opportunity_Rate_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Rate_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Rate Plan</label>
        <referenceTo>Product_Rate_Plan__c</referenceTo>
        <relationshipLabel>Opportunity Rate Plans</relationshipLabel>
        <relationshipName>Opportunity_Rate_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SequenceNumber__c</fullName>
        <label>Sequence Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAT_Roll_Up__c</fullName>
        <label>VAT Roll Up</label>
        <summarizedField>Opportunity_Rate_Plan_Charge__c.VAT__c</summarizedField>
        <summaryForeignKey>Opportunity_Rate_Plan_Charge__c.Opportunity_Rate_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Opportunity Rate Plan</label>
    <nameField>
        <label>Opportunity Rate Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Rate Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>